Updated version api and added swagger docs
